apply plugin: 'com.android.application'
android {
    compileSdk 36

    defaultConfig {
        applicationId "com.dsource.idc.jellowintl"
        minSdkVersion 23
        targetSdkVersion 36
        versionCode 109
        versionName "5.1.0"
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        debug {
            minifyEnabled false
            shrinkResources false
            testCoverageEnabled true
            applicationIdSuffix ".debug"
            buildConfigField "String", "DB_TYPE", '"testing"'
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        release {
            minifyEnabled true
            shrinkResources true
            buildConfigField "String", "DB_TYPE", '"production"'
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    dataBinding {
        enabled = true
    }
    bundle{
        language{
            enableSplit = false
        }
    }
    testOptions {
        unitTests.returnDefaultValues = true
        unitTests.includeAndroidResources = true
        unitTests.all {
            jvmArgs(
                "--add-opens=java.base/java.lang=ALL-UNNAMED",
                "--add-opens=java.base/java.util=ALL-UNNAMED"
            )
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    namespace 'com.dsource.idc.jellowintl'
    lint {
        abortOnError false
    }

    buildFeatures{
        buildConfig true
    }

    buildFeatures{
        buildConfig true
    }
    configurations {
        implementation.exclude group: 'org.jetbrains', module: 'annotations'
    }
    packagingOptions {
        jniLibs {
            useLegacyPackaging = false
        }
    }
}

// Add this block after the 'android' block
afterEvaluate {
    tasks.matching { it.name == 'mergeDebugResources' }.all { task ->
        task.mustRunAfter tasks.matching { it.name == 'processDebugGoogleServices' }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    constraints {
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
        }
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
        }
    }
    implementation libs.multidex
    implementation libs.legacy.support.v4
    implementation libs.appcompat
    implementation libs.material
    implementation libs.constraintlayout
    implementation libs.play.app.update
    implementation libs.recyclerview
    implementation libs.legacy.support.core.utils
    implementation libs.gson
    implementation platform(libs.firebase.bom)
    implementation libs.firebase.analytics
    implementation libs.firebase.storage
    implementation libs.firebase.auth
    implementation libs.firebase.database
    implementation libs.firebase.messaging
    implementation libs.firebase.crashlytics
    implementation libs.datastore.preferences
    implementation libs.round.corner.progress.bar
    implementation libs.glide
    annotationProcessor 'androidx.annotation:annotation:1.3.0'
    annotationProcessor libs.glide.compiler
    implementation libs.mzip.android
    implementation libs.filedownloader
    implementation libs.rey5137.material
    implementation libs.appintro
    implementation libs.ccp
    implementation libs.android.image.cropper
    implementation libs.expandablerecyclerview

    implementation("${libs.advrecyclerview.get()}@aar") {
        transitive = true
    }

    implementation libs.room.runtime
    annotationProcessor libs.room.compiler

    implementation libs.annotations

    // Optional -- JUnit test framework
    androidTestImplementation libs.junit
    // Optional -- Robolectric environment
    androidTestImplementation libs.androidx.test.core
    /* Required for Espresso library*/
    androidTestImplementation libs.espresso.core
    androidTestImplementation libs.androidx.test.runner
    androidTestImplementation libs.androidx.test.rules
    androidTestImplementation libs.espresso.intents
    androidTestImplementation libs.espresso.contrib

    testImplementation libs.espresso.intents
    // Optional -- Mockito framework
    testImplementation libs.mockito.core
    testImplementation libs.testng
    testImplementation libs.robolectric
    testImplementation libs.robolectric.shadows.multidex
    testImplementation libs.androidx.test.ext.junit
    testImplementation libs.espresso.core
    testImplementation libs.espresso.intents
    testImplementation libs.espresso.contrib
    androidTestImplementation libs.mockito.android
    androidTestImplementation libs.androidx.test.ext.junit

    // version moved to catalog
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
}

apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'
apply plugin: 'androidx.navigation.safeargs'
apply plugin: 'jacoco'

jacoco {
    toolVersion = "0.8.11"
}

tasks.withType(Test).configureEach {
    jacoco.includeNoLocationClasses = true
    jacoco.excludes = ['jdk.internal.*']
}

task jacocoTestReport(type: JacocoReport, dependsOn: 'testDebugUnitTest') {
    reports {
        xml.required.set(true)
        html.required.set(true)
    }

    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*']
    def debugTree = fileTree(dir: "${buildDir}/intermediates/javac/debug/compileDebugJavaWithJavac/classes", excludes: fileFilter)
    def mainSrc = "${project.projectDir}/src/main/java"
    def execDataTree = fileTree(dir: "$buildDir", includes: [
            "jacoco/testDebugUnitTest.exec",
            "outputs/unit_test_code_coverage/debugUnitTest/testDebugUnitTest.exec"
    ])

    sourceDirectories.setFrom(files([mainSrc]))
    classDirectories.setFrom(files([debugTree]))
    executionData.setFrom(files([execDataTree]))
}
